# crema

./: .clear-target-files  .gitignore  .travis.yml  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  Makefile  README.md  pom.xml
.github/workflows/: deploy.yaml  javadoc.yaml  maven.yaml
CreMA/: pom.xml
CreMA/examples/: BNdefinition.java  BayesianFactors.java  CausalInferenceExamples.java  CausalInference_withEmpirical.java  CausalInference_withfullSCM.java  Constraints.java  CounterFactuals.java  CredalInference.java  CredalInference_Alessandro.java  DoCalculus.java  DoCalculus_approxLP.java  DoCalculus_withevidence.java  ExampleInferenceApproxLP.java  ExampleInferenceVE.java  PartyTwin.java  SC2CNSimpleCase.java  SimpleSCM.java  ToVertexAndConstraints.java
CreMA/papers/pgm20/: Fig1.java  Fig2.java
CreMA/papers/pgm20/examples/: Example9.java  Fig1.java  Fig2.java  GenerateModels.java
CreMA/papers/pgm20/experiments/: ChainMarkovian.java  ChainMarkovianCase.java  ChainNonMarkovianCase.java  InvokerWithTimeout.java  RunExperiments.java  paper_results.ipynb  plot_results.ipynb  precision_experiments.ipynb  precission_experiments.ipynb  precission_experiments2.ipynb  requirements.txt  run_experiments.ipynb  time_experiments.ipynb  time_experiments.py  util-results.ipynb  utilplots.py
CreMA/papers/uai20/: Fig1.java  Fig1_alt.java  Fig2.java  Fig2_alt.java
CreMA/scripts/: build.sh
ch/idsia/CreMA/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ch/idsia/CreMA/0.1.1/: CreMA-0.1.1-jar-with-dependencies.jar.md5  CreMA-0.1.1-jar-with-dependencies.jar.sha1  CreMA-0.1.1.jar.md5  CreMA-0.1.1.jar.sha1  CreMA-0.1.1.pom.md5  CreMA-0.1.1.pom.sha1
ch/idsia/credici/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ch/idsia/credici/0.1.1/: credici-0.1.1-jar-with-dependencies.jar.md5  credici-0.1.1-jar-with-dependencies.jar.sha1  credici-0.1.1.jar.md5  credici-0.1.1.jar.sha1  credici-0.1.1.pom.md5  (+1 more)
ch/idsia/credici/0.1.1-SNAPSHOT/: credici-0.1.1-20200708.151302-1-jar-with-dependencies.jar.md5  credici-0.1.1-20200708.151302-1-jar-with-dependencies.jar.sha1  credici-0.1.1-20200708.151302-1.jar.md5  credici-0.1.1-20200708.151302-1.jar.sha1  credici-0.1.1-20200708.151302-1.pom  credici-0.1.1-20200708.151302-1.pom.md5  credici-0.1.1-20200708.151302-1.pom.sha1  maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ch/idsia/crema/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
ch/javasoft/polco/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
cmake/: cpp.cmake  cpp.test.cmake
datasets/: simple2.csv
docs/: Makefile  conf.py  contact.rst  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  requirements.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  requirements.html  search.html  searchindex.js
docs/notes/: bayesianinference.rst  contact.rst  factors.rst  guideinference.rst  inference.rst  installation.rst  modeldef.rst  models.rst  requirements.rst
docs/quick/: getting_started.rst  requirements.rst
docs/tutorials/: bayesian_inference.rst  bayesian_networks.rst  cheatsheet.rst  credal_models.rst  domains.rst  factors.rst  iterators.rst  model_def.rst  networks.rst
examples/: BNdefinition.java  BayesianFactors.java  BayesianNetworkExample.java  BeliefPropagation.java  BeliefPropagationExample.java  CausalInference_withEmpirical.java  CausalModel.java  Constraints.java  CredalFactors.java  CredalInferenceExample.java  DoCalculus_noevidence.java  ExampleInferenceVE.java  LoadFromFile.java  PGMpaper.java  PGMpaper2.java  SC2CNSimpleCase.java  UaiParser.java  network.cn
examples/docs/: FactorsDef.java  Starting.java  inferEx1.java  inferEx2.java
examplesold/: CausalInference_withEmpirical.java  CausalInference_withfullSCM.java  CounterFactuals.java  CredalInference_Alessandro.java  DoCalculus_approxLP.java  DoCalculus_noevidence.java  DoCalculus_withevidence.java  PartyTwin.java  SC2CNSimpleCase.java  SimpleSCM.java  ToVertexAndConstraints.java
javadoc/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
models/: bayes_2.uai  chain3-nonmarkov.uai  hmodel-mult_n5_mID2_mD6_mV4_nV2-1.uai  pgm-hcredal.uai  pgm-vcredal.uai  simple-hcredal-copy.uai  simple-hcredal.uai  simple-hcredal2.uai  simple-hcredal3.uai  simple-scm.uai  simple-vcredal.uai  simple-vcredal2.uai  simple-vcredal2_.uai  simple-vcredal_2.uai  simple-vcredal_3.uai  simple.uai.do  simple.uai.evid
models/bif/: alloy.bif  asia.bif  cancer.bif  earthquake.bif  sachs.bif
models/test/: simple-vcredal.uai
net/sf/lp_solve/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
papers/: README.md
papers/pgm20/examples/: Example1to4.java  Example8.java  Example9.java  GenerateModels.java
papers/pgm20/experiments/: ChainMarkovianCase.java  ChainNonMarkovianCase.java  precission_experiments2.ipynb  requirements.txt  time_experiments.ipynb
src/main/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
src/main/cpp/cmake/: crema.h.in  version.h.in
src/main/cpp/crema/: crema.h  version.h
src/main/cpp/crema/core/: Domain.h  ObservationBuilder.cpp  ObservationBuilder.h  SimpleDomain.cpp  SimpleDomain.h  Strides.cpp  Strides.h
src/main/cpp/crema/utils/: ArraysUtil.cpp  ArraysUtil.h
src/main/cpp/include/crema/core/: DomainBuilder.h  ObservationBuilder.h  SimpleDomain.h  Strides.h
src/main/cpp/include/crema/utils/: ArraysUtil.h
src/main/cpp/src/crema/core/: ObservationBuilder.cpp  SimpleDomain.cpp  Strides.cpp
src/main/cpp/src/crema/utils/: ArraysUtil.cpp
src/main/swig/: classes.i  dynamic_cast_extension.i
src/test/cpp/: CMakeLists.txt
src/test/cpp/crema/: example.cpp
src/test/resources/: r.txt  students_rights.txt  students_wrongs.txt  w.txt
(+3181 files in other folders)
